2009-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* man/pwck.8.xml, man/grpck.8.xml: Move the SEE ALSO section at
	the end.

2009-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Make sure opened files are closed.

2009-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml, man/grpck.8.xml, man/newgrp.1.xml,
	man/passwd.1.xml, man/sg.1.xml: Avoid a spurious comma.

2009-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: New placeholder for the next release.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* po/fr.po: Updated French translation.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Prepare the next release.
	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.1.xml: passwd -u does not reset the expiry field.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Updated some strings.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newgrp.c: Return the exit status of the child. Thanks
	to Lionel Elie Mamane.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Added warnings for absolute symlinks which could
	be broken by rename().

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Report errors to remove the user's mailbox.
	* NEWS, src/userdel.c: When USERGROUPS_ENAB is enabled, remove the
	user's group when the user was the only member. This is still not
	complete, as the user could have been specified twice in the
	members.
	* NEWS, src/userdel.c: Do not fail when -r is used and the home
	directory does not exist.

2009-05-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Added warning for relative symlinks.